# git-back-up

./: .coverage  .dockerignore  .example.env  .gitignore  DESIGN.md  Dockerfile  PROJECT.md  README.md  docker-compose.yml  main.py  pyproject.toml
core/: config.py  security.py
database/engine/: __init__.py  engine.py
database/repositories/: __init__.py  git_repo_repo.py  user_repo.py
database/tables/: __init__.py  git_repo_tables.py  user_sessions.py
domain/jobs/: controllers.py  schemas.py
domain/repos/: controllers.py  schemas.py  services.py
domain/webhooks/: controllers.py  schemas.py
middleware/: auth.py
services/: git_cli.py  notifications.py
templates/components/: ui.html
templates/layouts/: base.html
templates/pages/: dashboard.html  job_detail.html  login.html  register.html  repo_detail.html  repo_edit.html  repos.html  settings.html  webhooks.html
tests/: test_git_cli.py  test_notifications.py  test_security.py
ui/: auth_controllers.py  controllers.py
workers/: scheduler.py  tasks.py
