[project]
name = "git-back-up"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "advanced-alchemy>=1.9.3",
    "asyncpg>=0.31.0",
    "litestar>=2.21.1",
    "psycopg[binary]>=3.3.3",
    "sqlalchemy>=2.0.49",
    "procrastinate[psycopg]>=2.13.0",
    "jinja2>=3.1.3",
    "cryptography>=42.0.5",
    "pydantic-settings>=2.2.1",
    "httpx>=0.27.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
]
